# knm_synthesizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  knm_soundfont.hpp  knm_synthesizer.hpp
.github/workflows/: build.yaml
docs/: CMakeLists.txt  Doxyfile.in  api_channel.rst  api_settings.rst  api_synthesizer.rst  conf.py  index.rst  license.rst  usage.rst
examples/: CMakeLists.txt  mono.cpp  stereo.cpp
tests/: CMakeLists.txt  filter.hpp  lfo.hpp  main.cpp  modulation_envelope.hpp  sampler.hpp  synthesizer.hpp  voice.hpp  volume_envelope.hpp
tests/data/: 440_16bits.sf2
